# tools

./: .gitignore  Cargo.toml  README.md  fig_compare.py  font_replacement.py  main.py  maturin_all.sh  pyproject.toml  signal_plot.py
rust/font_process/: Cargo.toml  pyproject.toml
rust/font_process/src/: lib.rs
rust/generator/src/: generator.rs  lib.rs
rust/signal_generator/: Cargo.toml  pyproject.toml
rust/signal_generator/src/: lib.rs
src/: fformat.py  font_process.py  font_process.pyi  signal_generator.py  signal_generator.pyi
