[workspace]
members = [
  "rust/generator",
]
resolver = "2"

[profile.release]
# Optimize for speed and complexity; level 3 or "z" for size makes 
# decompilation significantly more difficult by altering code structure.
opt-level = 3
# Enable Link-Time Optimization to merge functions across modules, 
# breaking down the logical boundaries of your source code.
lto = true
# Instruct the compiler to use a single code generation unit to 
# increase the effectiveness of LTO and cross-function obfuscation.
codegen-units = 1
# Automatically strip symbols and debug information from the binary 
# to remove function names and line numbers.
strip = "symbols"
# Use the "abort" strategy to remove panic unwinding metadata, 
# which can otherwise leak information about your source file structure.
panic = "abort"