[project]
name = "tools"
version = "0.1.0"
description = "Rust + Python data generation tools via maturin and PyO3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"matplotlib>=3.8",
	"maturin>=1.12.2",
	"numpy>=2.2.6",
	"scipy>=1.15.3",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rust_tools"
