[project]
name = "tools"
version = "0.1.0"
description = "Rust + Python data generation tools via maturin and PyO3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"imagehash>=4.3.2",
	"matplotlib>=3.8",
	"maturin>=1.12.2",
	"numpy>=2.2.6",
	"opencv-python>=4.13.0.92",
	"pillow>=12.1.1",
	"pymupdf>=1.27.1",
	"scikit-image>=0.25.2",
	"scipy>=1.15.3",
]

[build-system]
requires = ["maturin>=1.12.4"]
build-backend = "maturin"

[tool.uv]
package = false
